# advent_of_code_2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  aoc.cpp
dec01/: main.cpp
dec02/: main.cpp
dec03/: main.cpp
dec04/: main.cpp
dec05/: main.cpp
dec06/: main.cpp
dec07/: main.cpp
dec08/: main.cpp
dec09/: main.cpp
dec11/: main.cpp
dec12/: main.cpp
